@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=liw
-VERSION=1.2.3
+VERSION=1.2.4
 
-DEPENDENCY="zeda=1.5.7"
+DEPENDENCY="zeda=1.5.10"
 
 # dynamic linker (libdl)
 CONFIG_USE_LIBDL=y
